<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/inputeModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/dialog_autoCompleteTextView_courseName"
                style="@style/inputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dialog_credit"
                    style="@style/inputStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/credit"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/dialog_gpa"
                    style="@style/inputStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/gpa"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/dialog_btnAdd"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/mybutton"
            android:text="@string/add_btn"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>