<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1abc9c"
    tools:context="com.bimurtoit.com.activity.HomeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|fill_horizontal|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:id="@+id/calculateCGPA_CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            app:cardBackgroundColor="#16a085"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon_credit"
                    android:src="@drawable/calculator" />

                <TextView
                    android:id="@+id/cgpa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_cgpa"
                    android:textAlignment="center"
                    android:textColor="#ecf0f1"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/resultBook_CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calculateCGPA_CardView"
            app:cardBackgroundColor="#16a085"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/result_book_img"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon_credit"
                    android:src="@drawable/notebookk" />

                <TextView
                    android:id="@+id/book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/result_book"
                    android:textAlignment="center"
                    android:textColor="#ecf0f1"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>

